# MaxHub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py  middlewares.py
app/db/: engine.py  models.py
app/handlers/: admin.py  common.py  converter.py  todo.py  word_of_day.py
app/services/: broadcast.py  converter.py  word_of_day.py
certs/: README.md
data/: words.json
deploy/: Caddyfile
docker/: Dockerfile  docker-compose.local.yml  docker-compose.prod.caddyfile.yml  docker-compose.prod.nginx.yml  docker-compose.prod.yml  docker-entrypoint.sh
docker/nginx/: README.md  maxhub.conf.example
migrations/: env.py
migrations/versions/: 0002_add_drink_reviews_table.py
src/bot/: __main__.py  config.py
tests/: conftest.py  test_config.py  test_db_broadcasts_repo.py  test_db_drink_reviews_repo.py  test_db_models.py  test_db_todos_repo.py  test_db_users_repo.py  test_db_word_subscriptions_repo.py  test_handlers_admin.py  test_handlers_common.py  test_handlers_converter.py  test_handlers_drinks.py  test_handlers_fallback.py  test_handlers_todo.py  test_handlers_word_of_day.py  test_main.py  test_middlewares_activity.py  test_middlewares_limiter.py  test_miniapp_auth.py  test_miniapp_router.py  test_miniapp_router_drinks.py  test_rate_limit.py  test_services_broadcast.py  test_services_converter.py  test_services_drink_reviews.py  test_services_rate_limit.py  test_services_word_of_day.py
tests/db/: conftest.py  test_activity_middleware.py  test_broadcasts_repo.py  test_models.py  test_todos_repo.py  test_users_repo.py  test_word_subscriptions_repo.py
tests/handlers/: conftest.py  test_admin.py  test_common.py  test_converter.py  test_todo.py  test_word_of_day.py
tests/services/: test_broadcast.py  (+2 more)
(+35 files in other folders)
