[project]
name = "maxhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "maxapi[fastapi]>=1.2.1",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
